updating with latest from ftp site

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   <div class="row">
 
     <div class="col-sm-7 col-sm-offset-1 left-col">
-      <img src="images/aboutcircles.png" class="img-responsive circle" alt="interaction + visual + copy">
+      <img src="images/aboutcircles.png" class="img-responsive circle" alt="user experience + brand + strategy">
 
       <span class="small-header">Across</span>
 
@@ -56,7 +56,7 @@
     <div class="col-sm-4 right-col text-center">
       <img src="images/headshot_large.png" class="img-responsive img-circle circle" alt="">
       <span class="small-header">Erin Gallup</span>
-      <a class="email" href="mailto:eg@eringallup.info">eg@eringallup.info</a>
+      <a class="email" href="mailto:eg@eringallup.com">eg@eringallup.com</a>
       <ul class="social list-unstyled list-inline">
         <li><a class="color-twitter" target="_blank" href="//twitter.com/aggregateart"><i class="fa fa-twitter"></i></a></li>
         <li><a class="color-linkedin" target="_blank" href="//www.linkedin.com/in/egallup"><i class="fa fa-linkedin-square"></i></a></li>
