--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
 <div class="container container-wide homethumbs">
   <div class="row">
+  <a class="col-sm-4 thumb" href="projects/joyus.html">
+      <div>
+        <span class="thumbimage" style="background-image: url(images/home_joyus.png);"></span>
+        <span class="thumbwords">online shoppers</span>
+      </div>
+    </a>
     <a class="col-sm-4 thumb" href="projects/the-boardlist.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_theboardlist.png);"></span>
@@ -71,13 +77,13 @@
       <div>
         <span class="thumbimage" style="background-image: url(images/home_bnbledger.png);"></span>
         <span class="thumbwords">airbnb power hosts</span>
-      </div-->
+      </div>
     <a class="col-sm-4 thumb" href="projects/currency-cheat-sheet.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_currencycheatsheet.png);"></span>
         <span class="thumbwords">the money curious</span>
       </div>
-    </a>
+    </a>-->
   </div>
 </div>
 
@@ -93,7 +99,7 @@
   </div>
   <div class="row">
     <div class="col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2 text-right">
-      <img src="../images/fourelements.png" class="img-responsive fourelements" alt="">
+      <img src="../images/fourelements.png" class="img-responsive fourelements" alt="Four Elements for Ease of Use">
     </div>
     <div class="col-sm-4 col-sm-offset-2 col-xs-8 col-xs-offset-2">
       <ul class="list-unstyled">
