--- a/projects/coin-ledger.html
+++ b/projects/coin-ledger.html
@@ -154,6 +154,8 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Bitcoin investors using the old site reported that they did not have a clear separation between their portfolio's value and bitcoin's price value. The old site had a cluttered feel and users were dubious if the site was safe and could be trusted to have access to their sensistive financial information.</p>
+      <img class="img-responsive" src="../images/coinledger/11.png">
+      <img class="img-responsive" src="../images/coinledger/12.png">
     </div>
   </div>
 </div>
@@ -167,7 +169,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Not being a bitcoin investor myself, I needed to do some research to understand their needs. I first examined how currencies worked so I could understand bitcoin's backstory. I then interviewed an investor and learned that it was difficult to mentally process bitcoin's currency conversion as there are tiny fractions involved ($1 roughly equals 0.0043 bitcoins). It was important to separate the user's portfolio value from bitcoin's trading price. To do this I designed a strong color bar at the top of the product to make the separation clear.</p>
+      <p>Not being a bitcoin investor myself, I needed to do some research to understand their needs. I first examined how currencies worked so I could understand bitcoin's backstory. I then interviewed an investor and learned that it was difficult to mentally process bitcoin's currency conversion as there are tiny fractions involved (at the time of this writing, $1 roughly equals 0.0043 bitcoins). It was important to separate the user's portfolio value from bitcoin's trading price. To do this I designed a strong color bar at the top of the product to make the separation clear.</p>
       <img class="img-responsive" src="../images/coinledger/2.png">
 
       <p>Bitcoin's price can vary dramatically minute to minute, and investors trading on this fact need to monitor price fluctuations and see trends at where they bought and sold. I designed a dropdown area where investors could access this information.</p>
