--- a/projects/creativelive.html
+++ b/projects/creativelive.html
@@ -249,6 +249,10 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Users of the old site said that they had trouble understanding what the company could do for them. They did not know that there was a live class happening then that they could watch for free. They also had trouble comprehending the videos on the class page.</p>
+      <img class="img-responsive" src="../images/creativelive/25.png">
+      <img class="img-responsive" src="../images/creativelive/27.png">
+      <img class="img-responsive" src="../images/creativelive/28.png">
+      <img class="img-responsive" src="../images/creativelive/30.png">
     </div>
   </div>
 </div>
@@ -265,7 +269,7 @@
       <p>With the redesign, I started by simplifying the navigation to allow for less reading. I incorporated behind the scenes photos into the home page that showed what Creative Live did, which reinforced the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them and chose a complementary font that had a friendly handwriting feel.</p>
       <img class="img-responsive" src="../images/creativelive/2.png">
 
-      <p>Instead of having one corporate color, I assigned colors to each channel to allow the user to quickly remember the one they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
+      <p>Instead of having one highlight color, I assigned colors to each channel to allow the user to quickly remember the one they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
       <img class="img-responsive" style="border:none" src="../images/creativelive/4.png">
 
       <p>On catalog pages I created a simple filtering mechanism.</p>
