--- a/projects/joyus.html
+++ b/projects/joyus.html
@@ -28,8 +28,8 @@
 <div class="photo-container clearfix">
   <div class="subphoto" style="background-image: url(../images/joyus.jpg);"></div>
   <div view-slides class="whitecard">
-    <h4>a shopping destination for</h4>
-    <h5>chic busy women</h5>
+    <h4>a video hub for</h4>
+    <h5>online shoppers</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
@@ -50,89 +50,89 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/1.png">
+            <img class="img-responsive" src="../images/joyus/13.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>home page and branding</h4>
+            <h4>Tique website</h4>
             <hr>
-            <p>The site was designed to be striking and exude warmth and positivity while at the same time avoid sanctimony.</p>
+            <p>A new destination for video shopping that includes a Joyus channel.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/2.png">
+            <img class="img-responsive" src="../images/joyus/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>nomination tool</h4>
+            <h4>easy shopping</h4>
             <hr>
-            <p>Users approved as nominators can easily refer the qualified women they know and endorse their capabilities.</p>
+            <p>Users can watch a group of similarly themed products without refreshing the page. Shopping as entertainment.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/3.png">
+            <img class="img-responsive" src="../images/joyus/10.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>searching tool</h4>
+            <h4>product detail pages</h4>
             <hr>
-            <p>Companies looking to fill a seat can quickly perform filtered searches of endorsed candidates.</p>
+            <p>Were implemented to make watching and shopping easy.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/4.png">
+            <img class="img-responsive" src="../images/joyus/5.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>candidate profiles</h4>
+            <h4>channel section</h4>
             <hr>
-            <p>By surfacing the most important information to a board seeker, profiles let candidate experience and recommendations shine.</p>
-          </div>
-        </div>
-
-        <!--<div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/5.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>user profiles</h4>
-            <hr>
-           <p>Details on a single property allow the user to drill into the data deeply.</p>
-          </div>
-        </div>-->
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/6.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>email templates</h4>
-            <hr>
-            <p>Coordinate and strengthen the branding.</p>
+            <p>Products are grouped into infinite themes and categories.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/7.png">
+            <img class="img-responsive" src="../images/joyus/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>shareable graphics</h4>
+            <h4>Joyus channel</h4>
             <hr>
-            <p>Educate the target market and strengthen the brand.</p>
+            <p>Allows Joyus to continue to serve its customers.</p>
           </div>
         </div>
 
          <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="img-responsive" src="../images/theboardlist/8.png">
+            <img class="img-responsive" src="../images/joyus/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>shareable graphics</h4>
+            <h4>products page</h4>
             <hr>
-            <p>Educate the target market and strengthen the brand.</p>
+            <p>Allows for a traditional ecommerce shopping experience, which allows customers to quickly find products.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="img-responsive" src="../images/joyus/12.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>embed player</h4>
+            <hr>
+            <p>The player is a shoppable form of native advertising...</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right col-sm-7 col-sm-push-5">
+            <img class="img-responsive" src="../images/joyus/14.png">
+          </div>
+          <div class="slide-left col-sm-5 col-sm-pull-7">
+            <h4>embed player</h4>
+            <hr>
+            <p>... that is placed into publisher sites like Aol.com</p>
           </div>
         </div>
 
@@ -147,11 +147,11 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>Who are</h3>
-        <h4>chic busy women?</h4>
+        <h4>online shoppers?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>They are working women and mothers. They are between the ages of 30 and 60 and want to stay current with beauty and fashion trends - without needing to devote time to magazines. They do a lot of their shopping online and appreciate curated products.<!--<a href="https://theboardlist.com/resources" target="blank">--><!--</a>--></p>
+      <p>They are working people, aged 25-60 who use the internet to shop for the things they need. They are busy and don’t have the time or desire to visit shopping malls but still want the pleasure of curated product discovery, as well as an easy destination to buy gifts.<!--<a href="https://theboardlist.com/resources" target="blank">--><!--</a>--></p>
       <!--<p>Today most board seats are filled through network referrals, which limit the pool of expertise available. Leaders are busy and do not have the time to invest in the research required to find high quality candidates. They need a tool that facilitates discovery.</p>-->
     </div>
   </div>
@@ -166,7 +166,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Joyus is an online store that sells the products it curates through short engaging videos. These videos are displayed on both Joyus.com and on partner sites like People and Aol through a proprietary player.</p>
+      <p>Joyus was one of the first online stores to use short hosted videos to sell products, and the first to partner with large publishers like Aol to promote goods through an embedded shoppable video player.</p>
       <!--<p>Joyus provides a revenue stream for media companies who have an audience but must give their content away for free.</p>-->
     </div>
   </div>
@@ -176,24 +176,45 @@
   <div class="row">
     <div class="col-sm-12">
       <h4 class="project-title">The Project</h4>
-      <p class="lead">Re-design and re-brand Joyus to appeal to a wide range of busy women.</p>
+      <p class="lead">Create an umbrella company for Joyus to increase consumer reach and redesign the experience to simplify video shopping.</p>
     </div>
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="img-responsive outline" src="../images/theboardlist/3.png"></div>
-      <h5>Website</h5>
-      <p>Provides a clean and elevated environment for shoppers.</p>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/joyus/1.png"></div>
+      <h5>Re-Brand</h5>
+      <p>Creates a neutral environment for many new types of products</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="img-responsive outline" src="../images/theboardlist/1.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/joyus/3.png"></div>
+      <h5>Company</h5>
+      <p>Allows Joyus to scale to accomodate more customers and appeal to more publishers</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/joyus/8.png"></div>
+      <h5>Hub Site</h5>
+      <p>Becomes a one-stop shopping destination that aggregates many channels</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/joyus/11.png"></div>
       <h5>Player</h5>
-      <p>Allows shoppers to learn about and buy products on sites like People.com</p>
+      <p>Allows shoppers to learn about and buy products on sites like Aol.com</p>
     </div>
-    <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="img-responsive outline" src="../images/theboardlist/7.png"></div>
-      <h5>Style Guide</h5>
-      <p>Defines the Joyus brand for consistency across mediums</p>
+  </div>
+</div>
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>old design</h3>
+        <h4>problems</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>Joyus' old logo and branding were targeted towards older women, which limited its customer base. The site took several clicks for viewers to access video pages and the traditional ecommerce navigation required a lot of reading and comprehension.<!--It's demographic was women aged 30-60, but its transition to a channel on a platform required a new design.The new hub had to have a clean, simple design that appealed to many different customer types and allowed shoppers to browse and buy easily.--></p>
+      <img class="img-responsive" src="../images/joyus/0.png">
+      <img class="img-responsive" src="../images/joyus/01.png">
+      
     </div>
   </div>
 </div>
@@ -207,17 +228,26 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Business leaders are more likely to try out and trust a polished-looking site. Photography, colors and text were carefully chosen to feel warm inviting and avoid seeming preachy.</p>
-      <img class="img-responsive" src="../images/theboardlist/1.png">
-      <p>The nomination part of the tool needed to allow for friction-free referrals of multiple members.</p>
-      <img class="img-responsive" src="../images/theboardlist/2.png">
-      <p>The board search part of the tool was designed to filter top candidates and allow for quick scanning.</p>
-      <img class="img-responsive" src="../images/theboardlist/3.png">
-      <p>Candidate profiles surface relevant information.</p>
-      <img class="img-responsive"  src="../images/theboardlist/4.png">
-      <p>Shareable infographics spread the message</p>
-      <img class="img-responsive phone"  src="../images/theboardlist/7.png">
-      <img class="img-responsive phone"  src="../images/theboardlist/8.png">
+      <p>The first task was to update the Joyus logo to a neutral gold tone, which elevated the brand and allowed for an immediate update for the site transition. Other brand refreshes included updated typographic system and updated color palette, which were implemented across the site and all videos.</p>
+      <img class="img-responsive" style="border:none" src="../images/joyus/1.png">
+      <p>Next, the product detail page design was updated to make viewing and shopping easier.</p>
+      <img class="img-responsive" src="../images/joyus/2.png">
+       <p>An identity for the new umbrella site, Tique (a shortening of 'boutique') was created to be harmonious with the new Joyus brand yet be neutral so it could work for many different future channels. The logo was a subtle reference to a replay button.</p>
+      <img class="img-responsive" style="border:none" src="../images/joyus/3.png">
+      <p>The design for the Tique hub allowed for products to be grouped by thematic channels and their videos watched uninterrupted, without a page refresh.</p>
+      <img class="img-responsive"  src="../images/joyus/4.png">
+      <p>The Tique channels page allowed for products to be grouped into infinite categories.</p>
+      <img class="img-responsive"  src="../images/joyus/5.png">
+      <p>The future Joyus channel.</p>
+      <img class="img-responsive"  src="../images/joyus/6.png">
+      <p>An example of a travel-themed channel.</p>
+      <img class="img-responsive"  src="../images/joyus/7.png"><img class="img-responsive"  src="../images/joyus/8.png">
+      <p>Customers who preferred to find goods through a traditional ecommerce path are able to in the products area.</p>
+      <img class="img-responsive"  src="../images/joyus/9.png">
+      <p>The product detail page used in Joyus' transition would be seemlessly integrated into the Tique website.</p>
+      <img class="img-responsive"  src="../images/joyus/10.png">
+      <p>The shoppable player embedded into publisher websites like Aol stands out yet complements many sites.</p>
+      <img class="img-responsive"  src="../images/joyus/14.png">
     </div>
   </div>
 </div>
