--- a/projects/quantcast.html
+++ b/projects/quantcast.html
@@ -152,6 +152,9 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Web publishers reported that the old design of Quantcast's product looked complicated. They felt lost in many layers of navigation and couldn't find their favorite features without having to click several times. They wanted an easier way to use the data given to them to back up their story to advertisers and wanted their public profile to tell a positive story of their business.</p>
+      <img class="img-responsive" src="../images/quantcast/13.png">
+      <img class="img-responsive" src="../images/quantcast/15.png">
+      <img class="img-responsive" src="../images/quantcast/16.png">
     </div>
   </div>
 </div>
