--- a/projects/the-boardlist.html
+++ b/projects/the-boardlist.html
@@ -55,7 +55,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>home page and branding</h4>
             <hr>
-            <p>The site was designed to be striking and exude warmth and positivity while at the same time avoid sanctimony.</p>
+            <p>The site was designed to be informative and exude warmth and positivity while at the same time avoid sanctimony.</p>
           </div>
         </div>
 
@@ -187,7 +187,23 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>Design</h3>
+        <h3>old design</h3>
+        <h4>problems</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>The first live version of theBoardlist was a site that the founders put together themselves as a proof of concept. The need proven, it was ready for brand and user experience refinement.</p>
+      <img class="img-responsive" src="../images/theboardlist/9.png">
+      <img class="img-responsive" src="../images/theboardlist/11.png">
+    </div>
+  </div>
+</div>
+
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>new design</h3>
         <h4>solutions</h4>
       </div>
     </div>
