--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
   <div class="row">
     <div class="col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2 text-right">
-      <img src="../images/fourelements.png" class="img-responsive fourelements" alt="Four Elements for Ease of Use">
+      <img src="images/fourelements.png" class="img-responsive fourelements" alt="Four Elements for Ease of Use">
     </div>
     <div class="col-sm-4 col-sm-offset-2 col-xs-8 col-xs-offset-2">
       <ul class="list-unstyled">
