putting the s in https

--- a/projects/currency-cheat-sheet.html
+++ b/projects/currency-cheat-sheet.html
@@ -7,9 +7,9 @@
   <link rel="icon" href="../images/favicon.png" type="image/png">
   <link rel="apple-touch-icon-precomposed" href="../images/favicon.png">
   <title> Erin Gallup | Product Design Leader</title>
-  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
 <body class="project-page" id="ccs">
@@ -44,7 +44,7 @@
             <h4>cheatsheet</h4>
             <hr>
             <p>Asite created for the curious to learn about money through the comparison of the dollar, gold and bitcoin.</p>
-            <p><a href="http://www.currencycheatsheet.com" target="blank">Visit the site</a></p>
+            <p><a href="https://www.currencycheatsheet.com" target="blank">Visit the site</a></p>
           </div>
         </div>
 
@@ -81,7 +81,7 @@
       <div class="project-item-top"><img class="img-responsive outline" src="../images/currencycheatsheet/1.png"></div>
       <h5>Site</h5>
       <p>Compares the dollar to gold and bitcoin.</p>
-      <p class="lead"><a href="http://www.currencycheatsheet.com" target="blank">Visit site</a></p>
+      <p class="lead"><a href="https://www.currencycheatsheet.com" target="blank">Visit site</a></p>
     </div>
   </div>
 </div>
@@ -134,10 +134,10 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
 <script src="../app.js" type="text/javascript"></script>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-2259203-1";
