--- a/projects/joyus.html
+++ b/projects/joyus.html
@@ -7,9 +7,9 @@
   <link rel="icon" href="../images/favicon.png" type="image/png">
   <link rel="apple-touch-icon-precomposed" href="../images/favicon.png">
   <title> Erin Gallup | Product Design Leader</title>
-  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
 <body class="project-page" id="bnb-ledger">
@@ -285,10 +285,10 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
 <script src="../app.js" type="text/javascript"></script>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-2259203-1";
